dada_tests/validate/await-where-not-allowed/ref.ref
Error: await is not permitted inside atomic sections
    ╭─[dada_tests/validate/await-where-not-allowed.dada:17:31]
    │
 16 │     atomic {
    ·     ───┬──  
    ·        ╰──── atomic section entered here
 17 │         print("Hello, world").await
    ·                               ──┬──  
    ·                                 ╰──── await is here
────╯
Error: await is not permitted inside atomic sections
    ╭─[dada_tests/validate/await-where-not-allowed.dada:10:31]
    │
  9 │     atomic {
    ·     ───┬──  
    ·        ╰──── atomic section entered here
 10 │         print("Hello, world").await
    ·                               ──┬──  
    ·                                 ╰──── await is here
────╯
Error: await is not permitted outside of async functions
   ╭─[dada_tests/validate/await-where-not-allowed.dada:4:27]
   │
 3 │ fn not_async() {
   · ─┬  
   ·  ╰── fn not declared `async`
 4 │     print("Hello, world").await
   ·                           ──┬──  
   ·                             ╰──── await is here
───╯
